@@ -1,3 +1,6 @@
+2016/09/01 v118
+	1. Hide the artifact bar, use the info bar to display the artifact power.
+
 2016/08/30 v116
 	1. The container view system would load the container with a delay for each one, so it won't lag when you open it for the first time.
 	2. A default container view is added, you can't modify it, and it will loaded when you entering the game, so you can still use items when you entering the game in combat.
